// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the NameAndFundingSourceReview component renders correctly when expanding is disabled 1`] = `
<StandardReview
  editHref={null}
  heading="3. Getting out of jail"
  headingLevel={4}
  onDeleteClick={null}
  onEditClick={null}
>
  <strong>
    Program type:
  </strong>
   
  Rich Uncle Pennybags
</StandardReview>
`;

exports[`the NameAndFundingSourceReview component renders correctly when expanding is enabled 1`] = `
<StandardReview
  editHref={null}
  heading="3. Getting out of jail"
  headingLevel={4}
  onDeleteClick={[MockFunction]}
  onEditClick={[MockFunction]}
>
  <strong>
    Program type:
  </strong>
   
  Rich Uncle Pennybags
</StandardReview>
`;
